# ai-subtitles-translator

./: README.md  pyproject.toml  requirements.txt
src/app/: app.py  config.py
src/app/models/: subtitle.py
src/app/tools/: llm.py  translation.py
